--- a/Apps/Home/View/register/register.html
+++ b/Apps/Home/View/register/register.html
@@ -39,7 +39,7 @@
       <div class="form-group  has-feedback">
         <label class="col-sm-2 control-label">密码</label>
         <div class="col-sm-10">
-          <input type="password" name='password' class="form-control" placeholder="密码"></div>
+          <input type="password" name='password' class="form-control" placeholder="密码(6-20位,支持英文/字母/下划线_)"></div>
       </div>
 
       <div class="form-group  has-feedback">
