--- a/Apps/Admin/Public/css/index.css
+++ b/Apps/Admin/Public/css/index.css
@@ -6,75 +6,103 @@
   background: #eee;
   position: fixed;
   color: #5593F2;
-  top: 0; }
-  .main-header span {
-    color: #5593F2;
-    font-weight: bold; }
-  .main-header ul {
-    list-style: none;
-    float: right; }
-    .main-header ul li {
-      float: left;
-      margin-right: 20px; }
-      .main-header ul li a:link {
-        color: #5593F2; }
-      .main-header ul li a {
-        text-decoration: none; }
+  top: 0;
+}
+.main-header span {
+  color: #5593F2;
+  font-weight: bold;
+}
+.main-header ul {
+  list-style: none;
+  float: right;
+}
+.main-header ul li {
+  float: left;
+  margin-right: 20px;
+}
+.main-header ul li a:link {
+  color: #5593F2;
+}
+.main-header ul li a {
+  text-decoration: none;
+}
 
 .main-content {
-  margin-top: 40px; }
-  .main-content #user table {
-    width: 60%;
-    margin: 10px auto; }
-    .main-content #user table tr td {
-      text-align: center; }
-  .main-content ul.goodlist {
-    margin: 20px auto; }
-    .main-content ul.goodlist li {
-      list-style: none;
-      float: left;
-      width: 220px;
-      margin-right: 10px; }
-      .main-content ul.goodlist li small {
-        font-size: 12px;
-        margin-left: 10px;
-        color: #D9534F; }
-    .main-content ul.goodlist .goodname {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden; }
-    .main-content ul.goodlist .gooddetail {
-      color: #ccc;
-      font-size: 12px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden; }
-    .main-content ul.goodlist .goodpicsmall {
-      width: 220px;
-      height: 185px;
-      display: inline-block; }
-  .main-content .loading {
-    z-index: 10;
-    position: fixed; }
-    .main-content .loading img {
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-      opacity: 0.3; }
-  .main-content .loadnext {
-    clear: both;
-    margin: 10px auto;
-    width: 100%;
-    height: 20px;
-    background: #eee;
-    text-align: center;
-    cursor: pointer;
-    display: none;
-    font-family: "微软雅黑","黑体","宋体"; }
-  .main-content #user .usertbody tr td {
-    vertical-align: middle; }
-  .main-content #user #nav-page {
-    width: 60%;
-    margin: 20px auto; }
+  margin-top: 40px;
+}
+.main-content #user table {
+  width: 60%;
+  margin: 10px auto;
+}
+.main-content #user table tr td {
+  text-align: center;
+}
+.main-content ul.goodlist {
+  margin: 20px auto;
+}
+.main-content ul.goodlist li {
+  list-style: none;
+  float: left;
+  width: 220px;
+  margin-right: 10px;
+}
+.main-content ul.goodlist li small {
+  font-size: 12px;
+  margin-left: 10px;
+  color: #D9534F;
+}
+.main-content ul.goodlist .goodname {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.main-content ul.goodlist .gooddetail {
+  color: #ccc;
+  font-size: 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.main-content ul.goodlist .goodpicsmall {
+  width: 220px;
+  height: 185px;
+  display: inline-block;
+}
+.main-content .loading {
+  z-index: 10;
+  position: fixed;
+}
+.main-content .loading img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  opacity: 0.3;
+}
+.main-content .loadnext {
+  clear: both;
+  margin: 10px auto;
+  width: 100%;
+  height: 20px;
+  background: #eee;
+  text-align: center;
+  cursor: pointer;
+  display: none;
+  font-family: "微软雅黑","黑体","宋体";
+}
+.main-content #user .usertbody tr td {
+  vertical-align: middle;
+}
+.main-content #user .user-table {
+  height: 440px;
+  margin: 20px 0 0 0;
+}
+.main-content #user #nav-page {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+.main-content #user #nav-page ul {
+  margin-top: -10px;
+}
 
 /*# sourceMappingURL=index.css.map */
