--- a/Apps/Admin/Public/css/index.css
+++ b/Apps/Admin/Public/css/index.css
@@ -105,4 +105,47 @@
   margin-top: -10px;
 }
 
+.main-dialog {
+  width: 400px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -250px;
+  border-radius: 5px;
+}
+.main-dialog .dialog-title {
+  height: 40px;
+  line-height: 40px;
+  background: #5BC0DE;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 5px 5px 0 0;
+  color: white;
+  margin-bottom: 0;
+}
+.main-dialog .dialog-body {
+  height: 240px;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  margin-top: 0;
+}
+.main-dialog .dialog-body #dialog-text {
+  margin-top: 1px;
+  width: 398px;
+  height: 180px;
+  resize: none;
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+.main-dialog .dialog-body .dialog-btn {
+  margin-top: 5px;
+  text-align: center;
+}
+.main-dialog .dialog-body .dialog-btn .dialog-submit {
+  margin-right: 30px;
+}
+
 /*# sourceMappingURL=index.css.map */
