--- a/Apps/Admin/Public/css/index.scss
+++ b/Apps/Admin/Public/css/index.scss
@@ -5,6 +5,9 @@
     white-space:nowrap; 
     overflow:hidden;
   }
+  html,body{
+    width: 100%;
+  }
 .main-header{
   width:100%;
   height:35px;
@@ -33,6 +36,13 @@
     }
     
   }
+}
+.clearfloat:after{
+  display:block;
+  clear:both;
+  content:"";
+  visibility:hidden;
+  height:0
 }
 .main-content{
   margin-top: 40px;
@@ -125,38 +135,34 @@ $dialog-width:400px;
   top:50%;
   left:50%;
   margin-top: -150px;
-  margin-left: -250px;
+  margin-left: -200px;
   border-radius:5px;
-  .dialog-title{
-    height: 40px;
-    line-height: 40px;
-    background:#5BC0DE;
+  display: none;
+  .dialog-heading{
     font-weight: bold;
-    text-align: center;
-     border-radius:5px 5px 0 0;
-     color:white;
-     margin-bottom: 0;
   }
-  .dialog-body{
-    height:240px;
-    border:1px solid #ccc;
-    border-top:none;
-    border-radius: 0 0 5px 5px;
-    margin-top: 0;
-    #dialog-text{
-      margin-top: 1px;
-      width: $dialog-width - 2px;
-      height: 180px;
-      resize: none;
-      border:none;
-      border-bottom:1px solid #ccc;
-    }
-    .dialog-btn{    
-    margin-top: 5px;  
-      text-align: center;
-      .dialog-submit{
+ .dialog-submit{
         margin-right: 30px;
       }
+  .dialog-body{
+    height:240px;
+    text-align: center;
+    .dialog-text{
+       width: 100%;
+      height: 180px;
+      resize: none;
     }
+
   }
+}
+.mask{
+  width: 100%;
+  height: calc(100% - 35px);
+  background:#ccc;
+  opacity: 0.4;
+  filter:alpha(opacity=40);
+  position:absolute;
+  top:35px;
+  left: 0;
+  display: none;
 }
