--- a/Apps/Admin/View/index/index.html
+++ b/Apps/Admin/View/index/index.html
@@ -25,7 +25,7 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="info">
+      <div role="tabpanel" class="tab-pane active clearfloat" id="info">
         <!-- 搜索 -->
         <div class="search">
           <input type="text" id='searchinfoinput' class="form-control input-radius" placeholder="关键词" />
@@ -34,6 +34,7 @@
         <!-- 列表 -->
         <ul class="goodlist"></ul>
       </div>
+      
       <div role="tabpanel" class="tab-pane" id="user">
         <!-- 搜索 -->
         <div class="search">
@@ -53,55 +54,43 @@
             <tbody class="usertbody"></tbody>
           </table>
         </div>
-        <nav id='nav-page'>
-          <!-- <ul class="pagination">
-          <li>
-            <a href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">1</a>
-          </li>
-          <li>
-            <a href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-        -->
-      </nav>
+        <nav id='nav-page'></nav>
+      </div>
     </div>
   </div>
-</div>
-<!-- 信息框 -->
-<div class="main-dialog">
-  <p class="dialog-title">向<span>**</span>发送系统消息</p>
-  <div class="dialog-body">
-    <textarea id='dialog-text'></textarea>
-    <div class="dialog-btn">
-      <button class="dialog-submit btn btn-info">提交</button>
-      <button class="dialog-close btn btn-info">关闭</button>
+<footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖网</footer>
+  <div class="mask"></div>
+  <!-- 信息框 -->
+  <div class="main-dialog">
+    <div class="panel panel-primary">
+      <div class="panel-heading dialog-heading">
+        向
+        <span class="dialog-name"></span>
+        发送私信
+      </div>
+      <div class="panel-body dialog-body">
+        <textarea class="dialog-text"></textarea>
+        <button class="btn btn-primary dialog-submit">发送</button>
+        <button class="btn btn-primary dialog-close">关闭</button>
+      </div>
     </div>
   </div>
-</div>
-
-<header class="main-header">
-  <ul>
-    <if condition="$Think.session.username neq ''">
-      <li class='loginUserName'>{$Think.session.username}</li>
-      <li>
-        <a href="{:U('Login/logout')}">退出</a>
-      </li>
-      <elseif condition="1"/>
-      <li style="width:50px">
-        <a href=" {:U('Login/index/')}">登录</a>
-      </li>
-      <else/>
-      <a href="{:U('Login/index/')}">登录1</a>
-    </if>
-  </ul>
-  <span>校园租赁买卖信息交流平台后台主页</span>
-</header>
+  <header class="main-header">
+    <ul>
+      <if condition="$Think.session.username neq ''">
+        <li class='loginUserName'>{$Think.session.username}</li>
+        <li>
+          <a href="{:U('Login/logout')}">退出</a>
+        </li>
+        <elseif condition="1"/>
+        <li style="width:50px">
+          <a href=" {:U('Login/index/')}">登录</a>
+        </li>
+        <else/>
+        <a href="{:U('Login/index/')}">登录1</a>
+      </if>
+    </ul>
+    <span>校园租赁买卖信息交流平台后台主页</span>
+  </header>
 </body>
 </html>
