--- a/Apps/Home/Public/css/personal/personal.scss
+++ b/Apps/Home/Public/css/personal/personal.scss
@@ -53,7 +53,7 @@ body{
         li{
           border-bottom:1px solid #ccc;
           margin-top: 10px;
-          color:#6F7462;
+          color:#ccc;
           .info-time{
             text-align: center;
           }
