--- a/Apps/Admin/View/index/index.html
+++ b/Apps/Admin/View/index/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
   <title>后台主页</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/index.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/form.css">
-
+  
+<!--[if lt IE 9]
+      <script src="__PUBLIC__/framework/html5.js"></script>
+      <script src="__PUBLIC__/framework/respond.min.js"></script>
+<![endif]-->
+    
   <script type="text/javascript" src="__PUBLIC__/framework/require.js" data-main="__PUBLIC__/js/index/indexapp"></script>
 
 </head>
