--- a/Apps/Home/Public/css/form.scss
+++ b/Apps/Home/Public/css/form.scss
@@ -3,7 +3,7 @@
   text-align: center;
 }
 .select-radius{
-  width: 80px;
+  width: 70px;
   border-top-right-radius:0;
   border-bottom-right-radius:0;
   padding-right:0;
@@ -13,7 +13,7 @@
 .input-radius{
     border-top-left-radius:0;
     border-bottom-left-radius:0;
-    width:500px;
+    width:40%;
     display:inline-block
 
 }
