--- a/Apps/Home/Public/css/common/header.css
+++ b/Apps/Home/Public/css/common/header.css
@@ -1,25 +1,27 @@
 @charset "UTF-8";
 .topbar {
   width: 100%;
-  min-width: 800px;
   height: 80px;
   -moz-box-shadow: 0 8px 8px #eee;
   /* 老的 Firefox */
-  box-shadow: 0 8px 8px #eee; }
+  box-shadow: 0 8px 8px #eee;
+  position: relative; }
   .topbar a.logo-link {
     display: inline-block;
     margin-top: 10px;
-    font-size: 25px;
+    font-size: 15px;
     font-weight: bold;
     text-decoration: none; }
   .topbar .login-link {
     font-size: 12px;
-    float: right;
-    margin-right: 60px;
+    right: 10px;
+    top: 10px;
+    position: absolute;
+    margin-right: 10px;
     margin-top: 20px; }
 
 .main-reg {
-  margin-top: 20px;
+  margin: 20px auto;
   width: 90%; }
   .main-reg form {
     font-size: 16px; }
