--- a/Apps/Home/Public/css/common/header.scss
+++ b/Apps/Home/Public/css/common/header.scss
@@ -1,28 +1,31 @@
 .topbar{
   width: 100%;
-  min-width:800px;
   height: 80px;
   -moz-box-shadow: 0 8px 8px #eee; /* 老的 Firefox */
 box-shadow: 0 8px 8px #eee;
+position:relative;
 
 a.logo-link{
   display: inline-block;
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 15px;
   font-weight: bold;
   text-decoration: none;
 };
 .login-link{
   font-size: 12px;
-  float: right;
-  margin-right:60px;
+  // float: right;
+  right:10px;
+  top:10px;
+  position:absolute;
+  margin-right:10px;
   margin-top: 20px;
 }
 }
 
 //main
 .main-reg{
-  margin-top: 20px;
+  margin: 20px auto;
   width: 90%;
   form{
     font-size:16px;
