--- a/Apps/Home/View/login/login.html
+++ b/Apps/Home/View/login/login.html
@@ -3,6 +3,7 @@
 <head>
   <title>登录</title>
   <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/common/header.css">
   <script type="text/javascript" src="__PUBLIC__/framework/require.js" data-main='__PUBLIC__/js/login/loginapp'></script>
