--- a/Apps/Admin/View/index/index.html
+++ b/Apps/Admin/View/index/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </div>
-<footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖网</footer>
+<footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©川大跳蚤市场网</footer>
   <div class="mask"></div>
   <!-- 信息框 -->
   <div class="main-dialog">
@@ -98,7 +98,7 @@
         <a href="{:U('Login/index/')}">登录1</a>
       </if>
     </ul>
-    <span>校园租赁买卖信息交流平台后台主页</span>
+    <span>川大跳蚤市场后台主页</span>
   </header>
 </body>
 </html>
