--- a/Apps/Home/View/item/item.html
+++ b/Apps/Home/View/item/item.html
@@ -58,6 +58,6 @@ for($i=1;$i<=$len;$i++){
   <!-- 头部信息 -->
  <include file="Apps/Home/index.html"/>
   
-  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖网</footer>
+  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©川大跳蚤市场网</footer>
 </body>
 </html>
