--- a/Apps/Admin/View/login/login.html
+++ b/Apps/Admin/View/login/login.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="__PUBLIC__/framework/require.js" data-main="__PUBLIC__/js/login/loginapp"></script>
 </head>
 <body>
-  <header class="login-header">校园租赁买卖信息分享平台后台登录</header>
+  <header class="login-header">川大跳蚤市场后台登录</header>
 
   <div class="login-form">
     <form class="form-horizontal">
@@ -38,7 +38,7 @@
       </div>
     </form>
   </div>
-  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖网</footer>
+  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©川大跳蚤市场网</footer>
 
 </body>
 </html>
