--- a/Apps/Home/Public/css/content.css
+++ b/Apps/Home/Public/css/content.css
@@ -21,13 +21,13 @@
     font-family: "微软雅黑","黑体","宋体"; }
 
 .rightlist {
-  width: calc(90% - 105px);
+  width: calc(100% - 105px);
   margin-left: 110px;
   box-sizing: content-box; }
 
 .goodlist {
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: row wrap;
@@ -44,6 +44,11 @@
     margin-left: 10px;
     color: #D9534F; }
 
+@media screen and (max-width: 450px) {
+  .goodlist li {
+    max-width: 100%;
+    width: 100%;
+    margin-left: 0; } }
 .goodname {
   text-overflow: ellipsis;
   white-space: nowrap;
