--- a/Apps/Home/Public/css/form.scss
+++ b/Apps/Home/Public/css/form.scss
@@ -8,7 +8,7 @@
   border-bottom-right-radius:0;
   padding-right:0;
   margin-right:-4px;
-  display:inline-block
+  display:inline-block;
 }
 .input-radius{
     border-top-left-radius:0;
