--- a/Apps/Home/Public/css/personal/personal.css
+++ b/Apps/Home/Public/css/personal/personal.css
@@ -3,8 +3,10 @@
   margin-top: 40px;
   width: 100%; }
   .personal .nav-tool ul.nav {
+    width: 100%;
     display: -webkit-flex;
     display: flex;
+    -ms-flex-wrap: nowrap;
     flex-flow: row nowrap; }
   .personal .nav-tool .tab-content #basicInfo {
     width: 80%;
@@ -23,7 +25,7 @@
     visibility: hidden;
     height: 0; }
   .personal .nav-tool .tab-content #myCollection {
-    width: 90%;
+    width: 100%;
     margin: 20px auto; }
   .personal .nav-tool .tab-content #updateGood {
     width: 80%;
@@ -59,7 +61,7 @@
   .personal .goodlist li {
     list-style: none;
     margin-left: 10px;
-    max-width: 200px; }
+    width: 200px; }
     .personal .goodlist li small {
       font-size: 12px;
       margin-left: 10px;
@@ -98,5 +100,14 @@
     height: 100%;
     border-radius: 10px;
     opacity: 0.3; }
+
+@media screen and (max-width: 450px) {
+  .personal .nav-tool ul.nav li {
+    width: 70px; }
+
+  .personal .goodlist li {
+    max-width: 100%;
+    width: 100%;
+    margin-left: 0; } }
 
 /*# sourceMappingURL=personal.css.map */
