--- a/Apps/Home/View/personal/personal.html
+++ b/Apps/Home/View/personal/personal.html
@@ -212,7 +212,7 @@
   <div class="loading"></div>
   <!-- 头部信息 -->
   <include file="Apps/Home/index.html"/>
-  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖网</footer>
+  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©川大跳蚤市场网</footer>
 
 </body>
 </html>
