--- a/Apps/Home/View/register/register.html
+++ b/Apps/Home/View/register/register.html
@@ -11,9 +11,7 @@
 <body>
   <header class="topbar">
     <a href='{:U('Index/index')}' class="logo-link">
-      <!-- <img src=''/>
-      -->
-    校园租赁买卖信息分享网
+     川大跳蚤市场
     </a>
     <div class="login-link">
       <span>我已注册，现在就&nbsp;</span>
@@ -75,7 +73,7 @@
 
   </div>
 
-  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©租赁买卖信息分享网</footer>
+  <footer style="text-align: center;font-size: 12px;color:#ccc;margin-top:50px;">2015©川大跳蚤市场网</footer>
 
 </body>
 </html>
