--- a/Apps/Home/Public/css/common/header.scss
+++ b/Apps/Home/Public/css/common/header.scss
@@ -11,7 +11,8 @@ a.logo-link{
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
-};
+    color:#7AABF5;
+}
 .login-link{
   font-size: 12px;
   // float: right;
@@ -20,6 +21,7 @@ a.logo-link{
   position:absolute;
   margin-right:10px;
   margin-top: 20px;
+
 }
 }
 
