--- a/Apps/Home/View/register/register.html
+++ b/Apps/Home/View/register/register.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>注册</title>
+  <title>川大跳蚤市场注册</title>
   <meta charset='utf-8'>
+  <meta name="keywords" content="交易,跳蚤,川大,买,卖,出售" />
+  <meta name="description" content="川大跳槽市场，专注买卖交易出售租赁活动" />
+  <link rel="bookmark" href="__ROOT__/favicon.ico"/>
+  <link rel="shortcut icon" type="image/ico" href="__ROOT__/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/common/header.css">
@@ -11,7 +15,8 @@
 <body>
   <header class="topbar">
     <a href='{:U('Index/index')}' class="logo-link">
-     川大跳蚤市场
+      <img alt="川大跳蚤市场" src="__PUBLIC__/image/logo32.png"/>
+      川大跳蚤市场
     </a>
     <div class="login-link">
       <span>我已注册，现在就&nbsp;</span>
