--- a/Apps/Home/Public/css/common/header.css
+++ b/Apps/Home/Public/css/common/header.css
@@ -11,7 +11,8 @@
     margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
-    text-decoration: none; }
+    text-decoration: none;
+    color: #7AABF5; }
   .topbar .login-link {
     font-size: 12px;
     right: 10px;
@@ -25,5 +26,3 @@
   width: 90%; }
   .main-reg form {
     font-size: 16px; }
-
-/*# sourceMappingURL=header.css.map */
