--- a/Apps/Home/View/index/index.html
+++ b/Apps/Home/View/index/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>首页</title>
+  <title>川大跳蚤市场首页</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="keywords" content="交易,跳蚤,川大,买,卖,出售" />
+  <meta name="description" content="川大跳槽市场，专注买卖交易出售租赁活动" />
   <meta charset='utf-8'>
+  <link rel="bookmark" href="__ROOT__/favicon.ico"/>
+  <link rel="shortcut icon" type="image/ico" href="__ROOT__/favicon.ico">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/index.css">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/form.css">
